WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151828
Web Inspector: Specifically Identify the Global Lexical Environment Scope
https://bugs.webkit.org/show_bug.cgi?id=151828
Summary
Web Inspector: Specifically Identify the Global Lexical Environment Scope
Joseph Pecoraro
Reported
2015-12-03 14:57:23 PST
* SUMMARY Specifically Identify the Global Lexical Environment Scope. * STEPS TO REPRODUCE 1. shell> run-webkit-tests inspector/debugger/breakpoint-scopes.html => There is a new Closure Scope right above Global Variables, should be better named * NOTES Test is currently skipped because all debugger tests are errantly skipped right now.
Attachments
[IMAGE] With Fix
(144.35 KB, image/png)
2015-12-03 14:58 PST
,
Joseph Pecoraro
no flags
Details
[PATCH] Proposed Fix
(13.86 KB, patch)
2015-12-03 15:02 PST
,
Joseph Pecoraro
joepeck
: review-
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(14.92 KB, patch)
2015-12-03 15:34 PST
,
Joseph Pecoraro
bburg
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-12-03 14:57:54 PST
<
rdar://problem/23750617
>
Joseph Pecoraro
Comment 2
2015-12-03 14:58:05 PST
Created
attachment 266564
[details]
[IMAGE] With Fix
Joseph Pecoraro
Comment 3
2015-12-03 15:02:49 PST
Created
attachment 266565
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 4
2015-12-03 15:04:39 PST
Attachment 266565
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/inspector/JSJavaScriptCallFrame.h:80: GLOBAL_LEXICAL_ENVIRONMENT_SCOPE is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 5
2015-12-03 15:26:11 PST
Comment on
attachment 266565
[details]
[PATCH] Proposed Fix Missed something.
Joseph Pecoraro
Comment 6
2015-12-03 15:34:47 PST
Created
attachment 266568
[details]
[PATCH] Proposed Fix Fixed Debug build ASSERTs by updating the protocol for runtime-checks.
Saam Barati
Comment 7
2015-12-03 18:19:04 PST
Comment on
attachment 266568
[details]
[PATCH] Proposed Fix LGTM
WebKit Commit Bot
Comment 8
2015-12-04 08:27:19 PST
Attachment 266568
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/inspector/JSJavaScriptCallFrame.h:80: GLOBAL_LEXICAL_ENVIRONMENT_SCOPE is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Blaze Burg
Comment 9
2015-12-04 08:28:01 PST
Comment on
attachment 266568
[details]
[PATCH] Proposed Fix r=me too, assuming it passes EWS.
Joseph Pecoraro
Comment 10
2015-12-04 10:53:20 PST
<
http://trac.webkit.org/changeset/193425
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug