Source/JavaScriptCore/inspector/JSJavaScriptCallFrame.h
@@ -77,6 +77,7 @@ public:
     static const unsigned short CLOSURE_SCOPE = 3;
     static const unsigned short CATCH_SCOPE = 4;
     static const unsigned short FUNCTION_NAME_SCOPE = 5;
+    static const unsigned short GLOBAL_LEXICAL_ENVIRONMENT_SCOPE = 6;
 
 protected:
     void finishCreation(JSC::VM&);
