LayoutTests/inspector/debugger/resources/scope.js
@@ -1,3 +1,5 @@
+let lexicalVariable = true;
+
 function testNativeScope() {
     var p = new Promise(function(resolve, reject) {
         debugger;
